--- a/public/css/style.css
+++ b/public/css/style.css
@@ -279,6 +279,17 @@ tr:hover {
     background-color: #c1ae00;
 }
 
+.kirim-button {
+    background-color: #0033ff;
+    color: #ffffff;
+    padding: 5px;
+    margin-bottom: 10px;
+}
+
+.kirim-button:hover {
+    background-color: rgb(7, 14, 138);
+}
+
 .no-data {
     text-align: center;
     padding: 20px;
