Update UI all views

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,7 +28,7 @@ h1 {
 
 h2 {
     color: #2c3e50;
-    margin-top: 40px;
+    margin-top: 50px;
     margin-bottom: 20px;
     border-bottom: 2px solid #eee;
     padding-bottom: 10px;
@@ -149,6 +149,12 @@ button:hover {
 
 .add-button:hover {
     background-color: #2980b9;
+}
+
+.table-responsive {
+    width: 100%;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch; /* smooth scroll di mobile */
 }
 
 /* Table Styles */
@@ -290,6 +296,13 @@ tr:hover {
     background-color: rgb(7, 14, 138);
 }
 
+.batal {
+    background-color: red; 
+    padding: 8px; 
+    color: white; 
+    border-radius: 5px;
+}
+
 .no-data {
     text-align: center;
     padding: 20px;
@@ -305,7 +318,7 @@ tr:hover {
 }
 
 .detail-group strong {
-    flex: 0 0 150px; /* Fixed width for labels */
+    flex: 0 0 180px; /* Fixed width for labels */
     color: #555;
     font-weight: 600;
 }
@@ -313,6 +326,10 @@ tr:hover {
 .detail-group span {
     flex: 1;
     color: #333;
+}
+
+.detail-group .space {
+    flex: 0 0 10px;
 }
 
 /* Actions in Detail View */
@@ -369,7 +386,7 @@ tr:hover {
 
 /* Filter menu styles */
 .filter-menu {
-    margin-bottom: 20px;
+    margin: 20px 0px;
     text-align: center;
 }
 
